Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48399

App fails to load cocoa platform plugin with some unicode characters

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.4.1, 5.5.0
    • Core: Plugins
    • None
    • OSX
    • macOS
    • f0f9f309e03accf17ffcf0a7c8df8f458a73f9f2

      I deploy my OSX application with macdeployqt, the cocoa platform plugin is at the right place. Everything is ok, we have thousands of users, but I received crash reports mostly coming from japanese people, the app crashes in
      QGuiApplicationPrivate::createPlatformIntegration

      I can reproduce it by just renaming my application package into ⻨.app, or by putting it in a folder named "⻨"

      I tested versions built with Qt 5.2, Qt 5.4.1 and Qt 5.5.0, all have the same issue. Old application releases with Qt 4.7.X don't have this issue.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            mabeghin Matthieu B.
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes