Support non-latin1 platform plugin paths

Replace two instances of QLatin1String() conversion
with QString::fromLocal8Bit()

Change-Id: I04336c47b0c030c69e38db9aa4dcd208d7200b63
Task-number: QTBUG-48399
Reviewed-by: Liang Qi <liang.qi@theqtcompany.com>
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: f0f9f309e03accf17ffcf0a7c8df8f458a73f9f2 https://github.com/qt/qtbase/commit/f0f9f309e03accf17ffcf0a7c8df8f458a73f9f2