src/gui/kernel/qguiapplication.cpp
@@ -3908,7 +3908,9 @@ comment|// Load the platform integration
 name|QString
 name|platformPluginPath
 init|=
-name|QLatin1String
+name|QString
+operator|::
+name|fromLocal8Bit
 argument_list|(
 name|qgetenv
 argument_list|(
@@ -4070,7 +4072,9 @@ name|argc
 condition|)
 name|platformPluginPath
 operator|=
-name|QLatin1String
+name|QString
+operator|::
+name|fromLocal8Bit
 argument_list|(
 name|argv
 index|[
